Actualización de nombre de la página

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voces de Pacasmayo - Cambiando nuestra realidad juntos</title>
+    <title>Ecos del Futuro - Cambiando nuestra realidad juntos</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
                 <div class="logo-icon">
                     <i class="fas fa-microphone-alt"></i>
                 </div>
-                <h1>VOCES DE PACASMAYO</h1>
+                <h1>Ecos del Futuro</h1>
             </div>
             <nav class="nav">
                 <a href="#inicio" class="nav-link">Inicio</a>
@@ -34,7 +34,7 @@
     <section id="inicio" class="hero">
         <div class="container">
             <div class="welcome-section">
-                <h2 class="welcome-title">Hola, <span id="userName">Ciudadano</span>, bienvenido a Voces de Pacasmayo</h2>
+                <h2 class="welcome-title">Hola, <span id="userName">Ciudadano</span>, bienvenido a Ecos del Futuro</h2>
                 <p class="welcome-subtitle">Pacasmayo tiene voz, y juntos podemos cambiar nuestra realidad</p>
                 
                 <!-- Indicador de Progreso -->
@@ -403,7 +403,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h3>VOCES DE PACASMAYO</h3>
+                    <h3>Ecos del Futuro</h3>
                     <p>Cambiando nuestra realidad juntos</p>
                 </div>
                 <div class="footer-links">
@@ -415,7 +415,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Voces de Pacasmayo. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Ecos del Futuro. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
